# Fake_Video_Detection

./: .gitignore  README.md  Video Proposed Model.drawio  index.html  pyproject.toml  testing.py
Schema/: videoopenapi.json
static/css/: style.css
static/js/: script.js
templates/: index.html
