[project]
name = "fake-video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "python-multipart>=0.0.26",
    "tensorflow>=2.21.0",
    "uvicorn[standard]>=0.44.0",
]
